# CGUtils

./: .clang-format  .gitignore  CMakeLists.txt  README.MD
ext/glfw/src/: mappings.h
graphics_api_test/: CMakeLists.txt
graphics_api_test/d3d11_test/: CMakeLists.txt  main.cpp
graphics_api_test/opengl_test/: CMakeLists.txt  Marry.mtl  imgui.ini  main.cpp  mesh.frag  mesh.vert
include/CGUtils/: LRU.hpp  api.hpp  boundingbox.hpp  camera.hpp  concurrency.hpp  console.hpp  container.hpp  event.hpp  file.hpp  geometry.hpp  image.hpp  math.hpp  memory.hpp  mesh.hpp  misc.hpp  model.hpp  modules.hpp  parallel.hpp  progressbar.hpp  singleton.hpp  std_string.hpp  texture.hpp  time.hpp  timer.hpp
include/CGUtils/api/d3d11/: buffer.hpp  common.hpp  device.hpp  device_context.hpp  input_layout.hpp  render_target.hpp  shader.hpp
include/CGUtils/api/imgui/: imgui_impl_vulkan.h
include/CGUtils/api/opengl/: _window.hpp  attrib.hpp  buffer.hpp  camera.hpp  common.hpp  demo.hpp  framebuffer.hpp  keyboard.hpp  mouse.hpp  program.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  texture.hpp  uniform.hpp  vertex_array.hpp  window.hpp
include/CGUtils/api/vulkan/: common.hpp  context.hpp
include/CGUtils/common/: common.hpp
include/CGUtils/console/: logger.hpp  progressbar.hpp
include/CGUtils/event/: keycode.hpp
include/CGUtils/file/: mapping_file.hpp  raw_file_io.hpp
include/CGUtils/geometry/: aabb2.hpp  aabb3.hpp  collision.hpp  frustum.hpp  geometry.hpp
include/CGUtils/geometry/decl/: aabb2.hpp  aabb3.hpp  collision.hpp  frustum.hpp
include/CGUtils/geometry/impl/: aabb2.inl  aabb3.inl
include/CGUtils/image/: load_image.hpp  save_image.hpp
include/CGUtils/internal/: type_define.hpp
include/CGUtils/math/: color2.hpp  color3.hpp  color4.hpp  common.hpp  coord.hpp  func.hpp  mat3_c.hpp  mat4_c.hpp  mat4_r.hpp  math.hpp  spherical_harmonics.hpp  tensor_view.hpp  transform2.hpp  transform3.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/CGUtils/math/decl/: aabb2.hpp  aabb3.hpp  color2.hpp  (+16 more)
include/CGUtils/memory/: alloc.hpp  memory_arena.hpp  object_pool.hpp
include/CGUtils/mesh/: mesh.hpp
include/CGUtils/misc/: concept.hpp  exception.hpp  hash.hpp  hashmap.hpp  intrusive.hpp  intrusive_hashmap.hpp  intrusive_list.hpp  lru.hpp  message_queue.hpp  ringbuffer.hpp  scope_bomb.hpp
include/CGUtils/model/: glTFModel.hpp  material.hpp  model.hpp
include/CGUtils/parallel/: parallel_for.hpp  read_write_lock.hpp  task_scheduler.hpp  thread_group.hpp  thread_id.hpp  thread_pool.hpp
include/CGUtils/string/: std_string.hpp
include/CGUtils/system/: platform.hpp
include/CGUtils/texture/: color_mapping.hpp  image1d.hpp  image1d_view.hpp  image2d.hpp  image2d_view.hpp  image3d.hpp  image3d_view.hpp  mipmap.hpp  mipmap2d.hpp  mipmap3d.hpp  sampler.hpp
include/CGUtils/time/: benchmark.hpp  timeline_trace_file.hpp  timer.hpp
src/api/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/api/opengl/: _window.cpp  camera.cpp  mouse.cpp  window.cpp
src/common/: common.cpp
src/ext/: impl.cpp
src/file/: mapping_file.cpp  raw_file_io.cpp
src/image/: load_image.cpp  save_image.cpp
src/mesh/: mesh.cpp
src/misc/: message_queue.cpp
src/model/: model.cpp
src/parallel/: thread_group.cpp  thread_id.cpp
test/: CMakeLists.txt  a.cpp  a.hpp  main.cpp  test_camera.cpp  test_console.cpp  test_container.cpp  test_image.cpp  test_lru.cpp  test_math.cpp  test_misc.cpp  test_parallel.cpp  test_progressbar.cpp  test_ref.cpp  test_singleton.cpp  test_texture.cpp  test_time.cpp  test_timer.cpp
(+32 files in other folders)
